RESOLVED FIXED65322
Web Inspector: [REGRESSION] Inspected tab crashes if navigated with inspector open and there are watch expressions added.
https://bugs.webkit.org/show_bug.cgi?id=65322
Summary Web Inspector: [REGRESSION] Inspected tab crashes if navigated with inspector...
Vsevolod Vlasov
Reported 2011-07-28 09:56:19 PDT
Inspected tab crashes if navigated with inspector open and there are watch expressions added.
Attachments
Patch (1.56 KB, patch)
2011-07-28 09:59 PDT, Vsevolod Vlasov
no flags
Patch (comments addressed) (4.26 KB, patch)
2011-07-28 10:27 PDT, Vsevolod Vlasov
no flags
Vsevolod Vlasov
Comment 1 2011-07-28 09:59:12 PDT
Pavel Feldman
Comment 2 2011-07-28 10:07:48 PDT
Comment on attachment 102265 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=102265&action=review > Source/WebCore/inspector/InspectorRuntimeAgent.cpp:66 > scriptState = getDefaultInspectedState(); Add you should do *errorString = "No frame with id is available.";
Vsevolod Vlasov
Comment 3 2011-07-28 10:27:35 PDT
Created attachment 102268 [details] Patch (comments addressed)
WebKit Review Bot
Comment 4 2011-07-28 16:38:00 PDT
Comment on attachment 102268 [details] Patch (comments addressed) Clearing flags on attachment: 102268 Committed r91956: <http://trac.webkit.org/changeset/91956>
WebKit Review Bot
Comment 5 2011-07-28 16:38:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.