Web Inspector: [REGRESSION] Inspected tab crashes if navigated with inspector open and there are watch expressions added. https://bugs.webkit.org/show_bug.cgi?id=65322

Reviewed by Pavel Feldman.

* inspector/InspectorController.cpp:
* inspector/InspectorRuntimeAgent.cpp:
(WebCore::InspectorRuntimeAgent::evaluate):
* inspector/InspectorRuntimeAgent.h:
* inspector/WorkerInspectorController.cpp:


Canonical link: https://commits.webkit.org/81115@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91956 268f45cc-cd09-0410-ab3c-d52691b4dbfc