Source/WebCore/inspector/InspectorRuntimeAgent.cpp
@@ -60,9 +60,13 @@ InspectorRuntimeAgent::~InspectorRuntimeAgent()
 void InspectorRuntimeAgent::evaluate(ErrorString* errorString, const String& expression, const String* const objectGroup, const bool* const includeCommandLineAPI, const bool* const doNotPauseOnExceptions, const String* const frameId, RefPtr<InspectorObject>* result, bool* wasThrown)
 {
     ScriptState* scriptState = 0;
-    if (frameId)
-        scriptState = scriptStateForFrameId(errorString, *frameId);
-    else
+    if (frameId) {
+        scriptState = scriptStateForFrameId(*frameId);
+        if (!scriptState) {
+            *errorString = "Frame with given id not found.";
+            return;
+        }
+    } else
         scriptState = getDefaultInspectedState();
     InjectedScript injectedScript = m_injectedScriptManager->injectedScriptFor(scriptState);
     if (injectedScript.hasNoValue()) {
